Print to PDF updates and fixes, still a little blurry but looks good other than that

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -236,7 +236,7 @@ textarea.page-tab {
 	border-color: rgb(51, 51, 51);
 }
 
-input {
+input.input {
 	font-size: 12px !important;
 	color: black !important;
 }
@@ -318,6 +318,20 @@ div.orange {
 div.burnt-red {
 	border-color: rgb(116, 20, 12);
 }
+
+div.input {
+	font-size: 12px !important;
+	color: black !important;
+	display: inline-block !important;
+	border-width: 1px;
+	border-style: solid;
+}
+div.title-border {
+	border: 0;
+	border-bottom: 1px solid black;
+	width: 80%;
+}
+
 div.regular {
 	min-height: 100px;
 	font-size: 12px !important;
